--- a/04-Apriltag-processing/docker-compose.yaml
+++ b/04-Apriltag-processing/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
     apriltag-processor:
-        image: duckietown/apriltag-processor:master19
+        image: duckietown/apriltag-processor:master19-amd64
         network_mode: "host"
         environment:
             ROS_MASTER_URI: http://172.31.168.115:11311
