--- a/06-wheel-odometry-processing/docker-compose.yaml
+++ b/06-wheel-odometry-processing/docker-compose.yaml
@@ -1,9 +1,9 @@
 version: '3'
 services:
     odometry-processor:
-        image: duckietown/wheel-odometry-processor:master19
+        image: duckietown/wheel-odometry-processor:master19-amd64
         network_mode: "host"
         environment:
             ACQ_ROS_MASTER_URI_SERVER_IP: 172.31.168.115
-            ACQ_DEVICE_NAME: autobot02
+            ACQ_DEVICE_NAME: autobot04
 
