--- a/01-graph-optimizer/Dockerfile
+++ b/01-graph-optimizer/Dockerfile
@@ -13,26 +13,28 @@ RUN pip install PyGeometry
 
 # DO NOT PUT ANYTHING HERE BEFORE THE G2O BUILDING! IT TAKES AGES!
 ARG g2o_lib_dir=lib/src/g2opy
-COPY ${g2o_lib_dir} /graph_optimizer/lib/src/g2opy
+COPY ${g2o_lib_dir} /code/lib/src/g2opy
 
-RUN cd /graph_optimizer/lib/src/g2opy ; mkdir build ; cd build ; cmake -DPYBIND11_PYTHON_VERSION=2.7 ..  ; make -j3; cd ..; python setup.py install
+RUN cd /code/lib/src/g2opy ; mkdir build ; cd build ; cmake -DPYBIND11_PYTHON_VERSION=2.7 ..  ; make -j3; cd ..; python setup.py install
 
 ARG graph_lib_dir=lib/
-COPY ${graph_lib_dir} /graph_optimizer/lib/
+COPY ${graph_lib_dir} /code/lib/
 
-RUN cd /graph_optimizer/lib; python setup.py develop --no-deps
+RUN cd /code/lib; python setup.py develop --no-deps
 
 
 ## Pose graph optimizer
 ARG ros_nodes=ros/src/pose_graph_builder
-RUN mkdir -p /graph_optimizer/catkin_ws/src/pose_graph_builder
-COPY ${ros_nodes} /graph_optimizer/catkin_ws/src/pose_graph_builder
+RUN mkdir -p /code/catkin_ws/src/pose_graph_builder
+COPY ${ros_nodes} /code/catkin_ws/src/pose_graph_builder
 
 # Setup the ros-visualization
-COPY ros/src/cslam_visualization /graph_optimizer/catkin_ws/src/cslam_visualization
-COPY ros/src/duckietown-visualization/duckietown_visualization /graph_optimizer/catkin_ws/src/duckietown_visualization
-RUN /bin/bash -c "source /opt/ros/kinetic/setup.bash; cd /graph_optimizer/catkin_ws/; catkin_make"
-RUN chmod +x /graph_optimizer/catkin_ws/src/pose_graph_builder/*.sh
+COPY ros/src/cslam_visualization /code/catkin_ws/src/cslam_visualization
+COPY ros/src/duckietown-visualization/duckietown_visualization /code/catkin_ws/src/duckietown_visualization
+RUN . /opt/ros/${ROS_DISTRO}/setup.sh && \
+    catkin build \
+    --workspace ${CATKIN_WS_DIR}/
+RUN chmod +x /code/catkin_ws/src/pose_graph_builder/*.sh
 
 
-CMD /bin/bash -c "/graph_optimizer/catkin_ws/src/pose_graph_builder/wrapper.sh"
+CMD /bin/bash -c "source /opt/ros/kinetic/setup.bash; source ${CATKIN_WS_DIR}/devel/setup.bash/devel/setup.bash; /code/catkin_ws/src/pose_graph_builder/wrapper.sh"
