rebase on daffy ros commons

--- a/01-graph-optimizer/Dockerfile
+++ b/01-graph-optimizer/Dockerfile
@@ -1,4 +1,4 @@
-FROM duckietown/dt-ros-commons:master19-amd64
+FROM duckietown/dt-ros-commons:daffy-amd64
 
 MAINTAINER Amaury Camus <camusam@ethz.ch>
 
