made the graph optimizer use more argument

--- a/01-graph-optimizer/docker-compose.yaml
+++ b/01-graph-optimizer/docker-compose.yaml
@@ -1,16 +1,18 @@
 version: '3'
 services:
     localization:
-        build:
-            context: .
-        network_mode: "host"
+        image: duckietown/cslam-graphoptimizer:daffy-amd64
+        # build:
+        #     context: .
         environment:
             ATMSGS_BAG: /data/processed.bag
             OUTPUT_DIR: /challenges/challenge-evaluation-output
             ROS_HOSTNAME: 172.31.168.115
             ROS_IP: 172.31.168.115
             ROS_MASTER : duckietown3
+            DUCKIETOWN_WORLD_FORK : AmaurX
+            MAP_NAME : robotarium2
+        network_mode: host
         volumes:
-            - ${PWD}/scripts/apriltagsDB_custom.yaml:/graph_optimizer/catkin_ws/src/pose_graph_builder/data/apriltagsDB_custom.yaml
-            - /home/amaury/Desktop:/data
+            - ~/AIDO3_experiment_data/submission_40/eval0/20190913_161852/data/logs_processed:/data
 
