--- a/04-Apriltag-processing/lib/src/aruco/CMakeLists.txt
+++ b/04-Apriltag-processing/lib/src/aruco/CMakeLists.txt
@@ -15,5 +15,5 @@ add_subdirectory(aruco-3.1.12)
 find_package(PythonLibs REQUIRED)
 find_package(OpenCV REQUIRED)
 include_directories(${PYTHON_INCLUDE_DIRS})
-add_library(aruco_func SHARED aruco_caller.cpp)
-target_link_libraries(aruco_func aruco opencv_calib3d opencv_highgui ${THREADLIB} ${PYTHON_LIBRARIES})
+add_library(aruco_lib SHARED aruco_caller.cpp)
+target_link_libraries(aruco_lib aruco opencv_calib3d opencv_highgui ${THREADLIB} ${PYTHON_LIBRARIES})
