migrate to python-boost library

--- a/04-Apriltag-processing/lib/src/aruco/CMakeLists.txt
+++ b/04-Apriltag-processing/lib/src/aruco/CMakeLists.txt
@@ -1,19 +1,16 @@
-# ----------------------------------------------------------------------------
-#   Basic Configuration
-# ----------------------------------------------------------------------------
 cmake_minimum_required(VERSION 3.0)
-project(aruco1 VERSION "3.1.12" LANGUAGES CXX)
-set(PROJECT_SOVERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}")
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-set(CMAKE_CXX_STANDARD 11) # C++11...
-set(CMAKE_CXX_STANDARD_REQUIRED ON) #...is required...
-set(CMAKE_CXX_EXTENSIONS ON) #...with compiler extensions like gnu++11
 
-INCLUDE_DIRECTORIES(aruco-3.1.12/src)
+include_directories(aruco-3.1.12/src)
 add_subdirectory(aruco-3.1.12)
 
-find_package(PythonLibs REQUIRED)
 find_package(OpenCV REQUIRED)
-include_directories(${PYTHON_INCLUDE_DIRS})
-add_library(aruco_lib SHARED aruco_caller.cpp)
-target_link_libraries(aruco_lib aruco opencv_calib3d opencv_highgui ${THREADLIB} ${PYTHON_LIBRARIES})
+find_package(Boost COMPONENTS python REQUIRED)
+find_package(PythonInterp)
+find_package(PythonLibs REQUIRED)
+
+python_add_module(aruco_caller aruco_caller.cpp)
+target_include_directories(aruco_caller PUBLIC
+        ${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${OPENCV_INCLUDE_DIRS})
+target_link_libraries(aruco_caller
+        ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${OPENCV_LIBRARIES} ${BOOST_NUMPY_SO}
+        aruco opencv_calib3d opencv_highgui)
