--- a/04-Apriltag-processing/Dockerfile
+++ b/04-Apriltag-processing/Dockerfile
@@ -5,6 +5,12 @@ RUN apt-get update && apt-get install -f -y --allow-unauthenticated \
                       python-opencv ros-kinetic-cv-bridge ros-kinetic-rospy python-pip && apt-get clean
 RUN pip install pathos multiprocessing-logging
 
+# You always need to specify:
+# ACQ_ROS_MASTER_URI_DEVICE
+# ACQ_ROS_MASTER_URI_DEVICE_IP
+# ACQ_ROS_MASTER_URI_SERVER
+# ACQ_ROS_MASTER_URI_SERVER_IP
+# ACQ_DEVICE_NAME # should match the topic, e.g. watchtower10
 
 # Download and install opencv-4.3.0 for the ArUco library
 RUN apt-get install -y wget unzip
@@ -27,11 +33,13 @@ ARG algo_dir=lib/src/duckietown_cslam/algo
 RUN mkdir /apriltag_processor_node
 
 # Download the ArUco library and fix the bug in it
-#RUN mkdir /apriltag_processor_node/aruco-3.1.12
-#COPY ${aruco_lib_dir}/aruco-3.1.12 /apriltag_processor_node/aruco-3.1.12
 COPY ${aruco_lib_dir}/aruco_bug_fixer.py /apriltag_processor_node/
 RUN cd /apriltag_processor_node && wget https://sourceforge.net/projects/aruco/files/3.1.12/aruco-3.1.12.zip && \
     unzip aruco-3.1.12.zip && rm -r aruco-3.1.12.zip && python /apriltag_processor_node/aruco_bug_fixer.py
+
+# Copy the AprilTagExtended message files
+COPY /ros/src/duckietown_msgs /ros/src/duckietown_msgs
+RUN /bin/bash -c "cd /ros/src && source /opt/ros/kinetic/setup.bash && catkin_init_workspace && cd .. && catkin_make"
 
 # Copy and build the ArUco specific program files and configure the environment variables
 COPY ${aruco_lib_dir}/aruco_caller.cpp /apriltag_processor_node/
@@ -52,13 +60,10 @@ COPY ${algo_dir}/image_rectifier.py /apriltag_processor_node
 COPY ${apriltag_processor_src_dir}/wrapper.sh /apriltag_processor_node
 RUN chmod +x /apriltag_processor_node/wrapper.sh
 
-# Copy the AprilTagExtended source file
-COPY duckietown_msgs /apriltag_processor_node/duckietown_msgs
-
 # Set optional environment variables
 ENV ACQ_ROS_MASTER_URI_DEVICE_PORT 11311
 ENV ACQ_ROS_MASTER_URI_SERVER_PORT 11311
-ENV ACQ_TOPIC_RAW imageSparse/compressed
+ENV ACQ_TOPIC_RAW camera_node/image/compressed
 ENV ACQ_TOPIC_CAMERAINFO camera_node/camera_info
 ENV ACQ_TAG_SIZE 0.065
 ENV ACQ_POSES_TOPIC poses
@@ -67,14 +72,7 @@ ENV ACQ_BEAUTIFY 0
 ENV ACQ_IMAGE_PROCESSORS 3
 ENV ACQ_DETECTOR_TYPE DFC
 
-# You always need to specify:
-# ACQ_ROS_MASTER_URI_DEVICE
-# ACQ_ROS_MASTER_URI_DEVICE_IP
-# ACQ_ROS_MASTER_URI_SERVER
-# ACQ_ROS_MASTER_URI_SERVER_IP
-# ACQ_DEVICE_NAME # should match the topic, e.g. watchtower10
-
 # Start the processes
 CMD /bin/bash -c "LD_LIBRARY_PATH=$LD_LIBRARY_PATH:${boost_numpy_dir} && \
-                  source /opt/ros/kinetic/setup.bash && \
+                  source /opt/ros/kinetic/setup.bash && source /ros/devel/setup.bash && \
                   cd /apriltag_processor_node && ./wrapper.sh"
