--- a/scripts/docker-compose-watchtower-x86.yml
+++ b/scripts/docker-compose-watchtower-x86.yml
@@ -10,13 +10,13 @@ services:
         - ACQ_ROS_MASTER_URI_SERVER=watchtowerXX.local
         - ACQ_ROS_MASTER_URI_SERVER_IP=XXX.XXX.XXX.XXX
         - ACQ_DEVICE_NAME=watchtowerXX
-        - ACQ_BEAUTIFY=0
-        - ACQ_STATIONARY_ODOMETRY=0
-        - ACQ_ODOMETRY_UPDATE_RATE=0
-        - ACQ_POSES_UPDATE_RATE=15
-        - ACQ_APRILTAG_QUAD_DECIMATE=2.0
-        - ACQ_TEST_STREAM=0
-        - ACQ_TOPIC_VELOCITY_TO_POSE=velocity_to_pose_node/pose
         - ACQ_TOPIC_RAW=camera_node/image/compressed
+        - ACQ_TOPIC_CAMERAINFO=camera_node/camera_info
+        - ACQ_TAG_SIZE=0.065
+        - ACQ_POSES_TOPIC=poses
+        - ACQ_TEST_STREAM=0
+        - ACQ_BEAUTIFY=0
+        - ACQ_IMAGE_PROCESSORS=3
+        - ACQ_DETECTOR_TYPE=DFC
       network_mode: "host"
       restart: always
